fix(fu-484): fixed gap between select all checkbox and it's label

--- a/projects/fusion-ui/components/dropdown-dual-multi-select/v3/components/dropdown-dual-multi-select-body/dropdown-dual-multi-select-body.component.scss
+++ b/projects/fusion-ui/components/dropdown-dual-multi-select/v3/components/dropdown-dual-multi-select-body/dropdown-dual-multi-select-body.component.scss
@@ -63,9 +63,7 @@ $itemWidth: 252px;
                         display: flex;
                         align-items: center;
                         color: $fu-black-500;
-                        .fu-options-label {
-                            margin: 5px;
-                        }
+                        gap: 8px;
                         .fu-check-all{
                             margin-left: 2px;
                             width: 16px;
